--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>SVA kodebibliotek – sva-codelib</title>
+<title>SVA kodebibliotek</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -80,7 +80,7 @@ ul.task-list li input[type="checkbox"] {
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container mx-auto">
     <a class="navbar-brand" href="../index.html">
-    <span class="navbar-title">sva-codelib</span>
+    <span class="navbar-title">SVA kodebibliotek</span>
     </a>
   </div>
             <div id="quarto-search" class="" title="Search"></div>
@@ -92,11 +92,6 @@ ul.task-list li input[type="checkbox"] {
   <li class="nav-item">
     <a class="nav-link active" href="../dashboard/index.html" aria-current="page"> 
 <span class="menu-text">Dashboard</span></a>
-  </li>  
-  <li class="nav-item">
-    <span class="nav-link">
-<span class="menu-text">about.qmd</span>
-    </span>
   </li>  
 </ul>
           </div> <!-- /navcollapse -->
