--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">    
   <head>      
-    <title>Redirect to docs/readme.html</title>      
-    <meta http-equiv="refresh" content="0;URL='docs/readme.html'" />    
+    <title>Redirect to dashboard/index.html</title>      
+    <meta http-equiv="refresh" content="0;URL='dashboard/index.html'" />    
   </head>    
   <body> 
   </body>  
