deploy: dc275e9dec86d54d7d61483df50c122cb1846668

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -124,12 +124,14 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>Søk her:</p>
+<p><link rel="stylesheet" href="../styles.css"></p>
 <div id="search-container">
-<p><input id="search-box" type="text" placeholder="Search..."></p>
-</div>
-<p>eller bruk filtrene for å velge metode, tema eller programmeringsspråk:</p>
+<input id="search-box" type="text" placeholder="Søk...">
 <div id="filters">
+
+</div>
+</div>
+<div id="project-counter">
 
 </div>
 <div id="projects-container">
