deploy: 4279124d9627385ff92947747309817ea6b6fb46

--- a/dashboard/faq.html
+++ b/dashboard/faq.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>SVA kodebibliotek</title>
+<title>FAQ</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -90,11 +90,11 @@ ul.task-list li input[type="checkbox"] {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link active" href="../dashboard/index.html" aria-current="page"> 
+    <a class="nav-link" href="../dashboard/index.html"> 
 <span class="menu-text">Kodebibliotek</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="../dashboard/faq.html"> 
+    <a class="nav-link active" href="../dashboard/faq.html" aria-current="page"> 
 <span class="menu-text">FAQ</span></a>
   </li>  
 </ul>
@@ -105,23 +105,33 @@ ul.task-list li input[type="checkbox"] {
     </nav>
 </header>
 <!-- content -->
-<div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-full page-navbar">
+<div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
-    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar zindex-bottom">
-        
+    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">On this page</h2>
+   
+  <ul>
+  <li><a href="#om-kodebiblioteket" id="toc-om-kodebiblioteket" class="nav-link active" data-scroll-target="#om-kodebiblioteket">Om kodebiblioteket</a>
+  <ul class="collapse">
+  <li><a href="#generelt" id="toc-generelt" class="nav-link" data-scroll-target="#generelt">Generelt</a></li>
+  <li><a href="#bruk-og-bidrag" id="toc-bruk-og-bidrag" class="nav-link" data-scroll-target="#bruk-og-bidrag">Bruk og bidrag</a></li>
+  </ul></li>
+  </ul>
+</nav>
     </div>
 <!-- main -->
-<main class="content column-page" id="quarto-document-content">
+<main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">SVA kodebibliotek</h1>
+<h1 class="title">FAQ</h1>
 </div>
 
 
 
-<div class="quarto-title-meta column-page">
+<div class="quarto-title-meta">
 
     
   
@@ -133,24 +143,31 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p><link rel="stylesheet" href="../styles.css"></p>
-<div id="search-container">
-<input id="search-box" type="text" placeholder="Søk...">
-<div id="filters">
+<section id="om-kodebiblioteket" class="level1">
+<h1>Om kodebiblioteket</h1>
+<section id="generelt" class="level2">
+<h2 class="anchored" data-anchor-id="generelt">Generelt</h2>
+<p><strong>Hva er dette?</strong><br>
+Dette er kodebiblioteket til SVA, en samling av prosjekter og kode for analyse og forskning.</p>
+<p><strong>Hvem kan bruke kodebiblioteket?</strong><br>
+Alle SVA-ansatte som er interessert i dataanalyse og forskning kan bruke ressursene.</p>
+<p><strong>Hvordan søker jeg etter prosjekter?</strong><br>
+Bruk søkefeltet øverst på siden for å filtrere prosjekter etter nøkkelord, forfatter, eller tema.</p>
+<p><strong>Hvor finner jeg dokumentasjon for et prosjekt?</strong><br>
+Klikk på prosjektkortet for å se mer informasjon og lenker til filer.</p>
+</section>
+<section id="bruk-og-bidrag" class="level2">
+<h2 class="anchored" data-anchor-id="bruk-og-bidrag">Bruk og bidrag</h2>
+<p><strong>Hvordan kan jeg bidra med et prosjekt?</strong> Du må ha en GitHub-konto tilknyttet SVA for å sende inn kode. Send inn en pull request på GitHub eller kontakt administratoren.</p>
+<p><strong>Kan jeg foreslå nye funksjoner?</strong><br>
+Ja, forslag og tilbakemeldinger er velkomne! Bruk issues på GitHub eller kontakt administratoren.</p>
+<hr>
+<p>Har du andre spørsmål?<br>
+Ta kontakt via e-post eller GitHub.</p>
 
-</div>
-</div>
-<div id="project-counter">
 
-</div>
-<div id="projects-container">
-<div id="projects" class="grid">
-
-</div>
-</div>
-<script src="filters.js"></script>
-
-
+</section>
+</section>
 
 </main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
