deploy: 322659601d66165240556c6dc2c957f46b1eeb4a

--- a/dashboard/faq.html
+++ b/dashboard/faq.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>FAQ</title>
+<title>Om kodebiblioteket</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -113,11 +113,9 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#om-kodebiblioteket" id="toc-om-kodebiblioteket" class="nav-link active" data-scroll-target="#om-kodebiblioteket">Om kodebiblioteket</a>
-  <ul class="collapse">
-  <li><a href="#generelt" id="toc-generelt" class="nav-link" data-scroll-target="#generelt">Generelt</a></li>
-  <li><a href="#bruk-og-bidrag" id="toc-bruk-og-bidrag" class="nav-link" data-scroll-target="#bruk-og-bidrag">Bruk og bidrag</a></li>
-  </ul></li>
+  <li><a href="#hvordan-finner-jeg-kode" id="toc-hvordan-finner-jeg-kode" class="nav-link active" data-scroll-target="#hvordan-finner-jeg-kode">Hvordan finner jeg kode?</a></li>
+  <li><a href="#hvordan-laster-jeg-ned-kode" id="toc-hvordan-laster-jeg-ned-kode" class="nav-link" data-scroll-target="#hvordan-laster-jeg-ned-kode">Hvordan laster jeg ned kode?</a></li>
+  <li><a href="#hvordan-kan-jeg-bidra" id="toc-hvordan-kan-jeg-bidra" class="nav-link" data-scroll-target="#hvordan-kan-jeg-bidra">Hvordan kan jeg bidra?</a></li>
   </ul>
 </nav>
     </div>
@@ -126,7 +124,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">FAQ</h1>
+<h1 class="title">Om kodebiblioteket</h1>
 </div>
 
 
@@ -143,30 +141,37 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="om-kodebiblioteket" class="level1">
-<h1>Om kodebiblioteket</h1>
-<section id="generelt" class="level2">
-<h2 class="anchored" data-anchor-id="generelt">Generelt</h2>
-<p><strong>Hva er dette?</strong><br>
-Dette er kodebiblioteket til SVA, en samling av prosjekter og kode for analyse og forskning.</p>
-<p><strong>Hvem kan bruke kodebiblioteket?</strong><br>
-Alle SVA-ansatte som er interessert i dataanalyse og forskning kan bruke ressursene.</p>
-<p><strong>Hvordan søker jeg etter prosjekter?</strong><br>
-Bruk søkefeltet øverst på siden for å filtrere prosjekter etter nøkkelord, forfatter, eller tema.</p>
-<p><strong>Hvor finner jeg dokumentasjon for et prosjekt?</strong><br>
-Klikk på prosjektkortet for å se mer informasjon og lenker til filer.</p>
+<p>Dette er et bibliotek med kode brukt av SVA-forskere i egne prosjekter. Her kan du finne kodesnutter som forskere ved SVA har delt, og som egner seg til gjenbruk i andre prosjekter.</p>
+<section id="hvordan-finner-jeg-kode" class="level2">
+<h2 class="anchored" data-anchor-id="hvordan-finner-jeg-kode">Hvordan finner jeg kode?</h2>
+<p>Du finner kode på to måter, og kan kombinere dem:</p>
+<ul>
+<li>Søk med fritekst
+<ul>
+<li>Søkefunksjonen gir resultater som inneholder teksten du har skrevet inn.</li>
+</ul></li>
+<li>Søk med filter i ulike kategorier, som metode og tema
+<ul>
+<li>Kategoriene oppdateres når du filtrerer, slik at bare relevante filtre er synlig.</li>
+<li>Deaktiver filtre ved å trykke igjen.</li>
+</ul></li>
+</ul>
+<p>Trykk “Finn filer” for å se prosjektfilene.</p>
 </section>
-<section id="bruk-og-bidrag" class="level2">
-<h2 class="anchored" data-anchor-id="bruk-og-bidrag">Bruk og bidrag</h2>
-<p><strong>Hvordan kan jeg bidra med et prosjekt?</strong> Du må ha en GitHub-konto tilknyttet SVA for å sende inn kode. Send inn en pull request på GitHub eller kontakt administratoren.</p>
-<p><strong>Kan jeg foreslå nye funksjoner?</strong><br>
-Ja, forslag og tilbakemeldinger er velkomne! Bruk issues på GitHub eller kontakt administratoren.</p>
+<section id="hvordan-laster-jeg-ned-kode" class="level2">
+<h2 class="anchored" data-anchor-id="hvordan-laster-jeg-ned-kode">Hvordan laster jeg ned kode?</h2>
+<p>Klikk på hver enkelt fil for å få opp innholdet. Velg “download raw file” (nedlastingsikon til høyre) for at filen skal lastes ned lokalt.</p>
+<p>Er det flere filer må de lastes ned hver for seg. Pass på at du har samme mappestruktur som filene har i GitHub.</p>
+<p><strong>Kreditering</strong>: Vi oppfordrer til å kreditere forfatterne når det gir mening, og du bruker store deler av andres kode.</p>
 <hr>
-<p>Har du andre spørsmål?<br>
-Ta kontakt via e-post eller GitHub.</p>
-
-
 </section>
+<section id="hvordan-kan-jeg-bidra" class="level2">
+<h2 class="anchored" data-anchor-id="hvordan-kan-jeg-bidra">Hvordan kan jeg bidra?</h2>
+<p>Du må ha en GitHub-konto tilknyttet SVA for å sende inn kode. Send inn en pull request på GitHub eller kontakt administrator: <a href="mailto:kodebibliotek@365.oslomet.no">navn + kodebibliotek@365.oslomet.no</a>.</p>
+<p><strong>Kan jeg foreslå nye funksjoner?</strong></p>
+<p>Ja, vi setter pris på forslag og tilbakemeldinger! Bruk issues på GitHub eller kontakt administrator: <a href="mailto:kodebibliotek@365.oslomet.no">navn + kodebibliotek@365.oslomet.no</a>.</p>
+
+
 </section>
 
 </main> <!-- /main -->
