deploy: 7b71efc18b2820144cfaf61695d3198225e5c93a

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -133,32 +133,32 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<!-- Link stylesheet -->
+<!-- Link til CSS stylesheet -->
 <p><link rel="stylesheet" href="../styles.css"></p>
-<!-- Introductory explanation text -->
+<!-- Introtekst topp -->
 <div class="explanation-text">
 <p>Her finner du kode delt av SVA-forskere. Bruk søkefeltet og filtrene for å lete i biblioteket.</p>
 </div>
-<!-- Search input and filters -->
+<!-- Søkefelt og filtre -->
 <div id="search-container">
 <input id="search-box" type="text" placeholder="Søk her...">
 <div id="filters">
 
 </div>
 </div>
-<!-- Project counter -->
+<!-- Resultatteller (x prosjekter) -->
 <div id="project-counter">
 
 </div>
-<!-- Projects grid container -->
+<!-- Resultater (container med prosjekter) -->
 <div id="projects-container">
 <div id="projects" class="grid">
 
 </div>
 </div>
-<!-- Load filtering and rendering logic -->
+<!-- JS: filtrering og søk -->
 <script src="filters.js"></script>
-<!-- Footer: Contact section -->
+<!-- Footer: Kreditering og kontakt -->
 <section id="contact" class="contact-footer">
 <b>Kreditering:</b> Vi oppfordrer til å kreditere forfatterne når du bruker store deler av andres kode.
 <p>
